InternexDev_Sandbox/src/objects/LockBox_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Routing_Number__c</fullName>
        <formula>Account_Number__c + Routing_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Routing_Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <defaultValue>&quot;Wells Fargo&quot;</defaultValue>
        <label>Bank Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <defaultValue>&quot;Philadelphia&quot;</defaultValue>
        <label>City</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client Account</label>
        <referenceTo>Client_Account__c</referenceTo>
        <relationshipLabel>LockBox Accounts</relationshipLabel>
        <relationshipName>LockBoxAccount_CA</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lock_A_c_Number_Routing_Number__c</fullName>
        <label>Lock A/c Number + Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lockbox_Number__c</fullName>
        <label>Lockbox Number</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Portal External ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>&apos;PA&apos;</defaultValue>
        <label>State</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <defaultValue>&quot;19178&quot;</defaultValue>
        <label>Zip Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LockBox Account</label>
    <nameField>
        <displayFormat>LBA-{0000}</displayFormat>
        <label>LockBox Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LockBoxAccounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Lock_Box_State_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(State__c)),OR(LEN(State__c)&gt;2 ,OR(LEN(SUBSTITUTE(State__c,&apos;,&apos;,NULL)) != 2,IF(FIND(SUBSTITUTE(State__c,&apos;,&apos;,NULL), &apos;AL,AK,AZ,AR,CA,CO,CT,DE,DC,FL,GA,HI,ID,IL,IN,IA,KS,KY,LA,ME,MD,MA,MI,MN,MS,MO,MT,NE,NV,NH,NJ,NM,NY,NC,ND,OH,OK,OR,PA,RI,SC,SD,TN,TX,UT,VT,VA,WA,WV,WI,WY&apos;) != 0,False,True))))</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>Please enter the valid USA ISO state codes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Box_Zipi_code_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Zip_Code__c)),OR(AND(Not(LEN(Zip_Code__c) = 5),Not(LEN(Zip_Code__c) = 10)),AND(LEN(Zip_Code__c) = 10,NOT(REGEX( Zip_Code__c, &quot;[0-9]{5}-[0-9]{4}&quot;))),AND(LEN(Zip_Code__c) = 5,NOT(REGEX( Zip_Code__c, &quot;[0-9]{5}&quot;)))))</errorConditionFormula>
        <errorDisplayField>Zip_Code__c</errorDisplayField>
        <errorMessage>Please enter the Zip Code in the format &quot;99999-9999&quot; or &quot;99999&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_Lockbox_for_one_ClientAccount_rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),Client_Account__r.Lockbox_Accounts_count__c &gt; 0)</errorConditionFormula>
        <errorMessage>You cannot insert multiple Lock-box Accounts for same Client-account.</errorMessage>
    </validationRules>
</CustomObject>